--- a/examples/several_examples.ipynb
+++ b/examples/several_examples.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now I'm going to add a source term that is a linear function of the variable (here concentration, k = 1e-4 1/s). Pay attention to the signs! I have moved the term to the left, and you can see that the source term is indeed producing mass.\n",
+    "Now I'm going to add a source term that is a linear function of the variable (here concentration, k = 1e-4 1/s). Pay attention to the signs! I have moved the term to the left hand side, and you can see that the source term is indeed producing mass.\n",
     "$$\\nabla. (-D \\nabla c) - kc = 0$$\n",
     "Boundary conditions:\n",
     "$$c(x=0,\\; y)=1.0$$\n",
@@ -301,7 +301,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transient diffusion term"
+    "## Transient diffusion equation\n",
+    "The transient diffussion equation,\n",
+    "$$\\frac{\\partial c}{\\partial t} + \\nabla. (-D \\nabla c) = 0,$$\n",
+    "can be solved in JFVM.jl by discretizing the accumulation term. Right now, only forward difference discretization (Euler) is available. It is not difficult to implement other time stepping methods."
    ]
   },
   {
@@ -315,7 +318,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cahn-Hilliard"
+    "# Cahn-Hilliard\n",
+    "For more information about this equation, see [its wikipedia page](https://en.wikipedia.org/wiki/Cahn–Hilliard_equation) and [this FiPy solution](https://www.ctcms.nist.gov/fipy/examples/cahnHilliard/generated/examples.cahnHilliard.mesh2D.html) that I have reproduced below in JFVM.jl. "
    ]
   },
   {
@@ -406,12 +410,11 @@
     "D_face=arithmeticMean(D_cell)\n",
     "e_cell=createCellVariable(m, 1.0)\n",
     "e_face  = arithmeticMean(e_cell)\n",
-    "e_face2 = arithmeticMean(e_cell)\n",
     "phi_old=createCellVariable(m, rand(Normal(0.5, 0.01), nx,ny))\n",
     "phi_init=copyCell(phi_old)\n",
     "phi=copyCell(phi_old)\n",
     "Mbc, RHSbc=boundaryConditionTerm(BC)\n",
-    "Mdif2=diffusionTerm(D_face)*diffusionTerm(e_face.*e_face2)\n",
+    "Mdif2=diffusionTerm(D_face)*diffusionTerm(e_face.*e_face)\n",
     "t_final = 300\n",
     "t = 0.0\n",
     "dexp = -5.0\n",
