fixed some bugs

--- a/examples/jfvm-a-finite-volume-tool-for-julia.ipynb
+++ b/examples/jfvm-a-finite-volume-tool-for-julia.ipynb
@@ -43,13 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "┌ Info: Precompiling JFVM [d32f81f0-000d-5c7c-8375-24efa40f8589]\n",
+      "└ @ Base loading.jl:1317\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mMUMPS solver (optional) is not available.\n",
       "┌ Info: Precompiling JFVMvis [a8ca9cd4-68e5-5638-b0e9-a2bb7b38c666]\n",
       "└ @ Base loading.jl:1317\n"
      ]
@@ -122,30 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: no method matching copyto!(::Float64, ::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{0}, Tuple{}, typeof(identity), Tuple{Float64}})\n\u001b[0mClosest candidates are:\n\u001b[0m  copyto!(\u001b[91m::AbstractArray\u001b[39m, ::Base.Broadcast.Broadcasted{var\"#s832\", Axes, F, Args} where {var\"#s832\"<:Base.Broadcast.AbstractArrayStyle{0}, Axes, F, Args<:Tuple}) at broadcast.jl:939\n\u001b[0m  copyto!(\u001b[91m::AbstractArray\u001b[39m, ::Base.Broadcast.Broadcasted) at broadcast.jl:936\n\u001b[0m  copyto!(\u001b[91m::AbstractArray\u001b[39m, ::Any) at abstractarray.jl:840",
+     "evalue": "UndefVarError: Ny not defined",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching copyto!(::Float64, ::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{0}, Tuple{}, typeof(identity), Tuple{Float64}})\n\u001b[0mClosest candidates are:\n\u001b[0m  copyto!(\u001b[91m::AbstractArray\u001b[39m, ::Base.Broadcast.Broadcasted{var\"#s832\", Axes, F, Args} where {var\"#s832\"<:Base.Broadcast.AbstractArrayStyle{0}, Axes, F, Args<:Tuple}) at broadcast.jl:939\n\u001b[0m  copyto!(\u001b[91m::AbstractArray\u001b[39m, ::Base.Broadcast.Broadcasted) at broadcast.jl:936\n\u001b[0m  copyto!(\u001b[91m::AbstractArray\u001b[39m, ::Any) at abstractarray.jl:840",
+      "UndefVarError: Ny not defined",
       "",
       "Stacktrace:",
-      " [1] materialize!",
-      "   @ ./broadcast.jl:894 [inlined]",
-      " [2] materialize!",
-      "   @ ./broadcast.jl:891 [inlined]",
-      " [3] boundaryConditionRadial2D(BC::BoundaryCondition)",
-      "   @ JFVM ~/projects/JFVM.jl/src/boundarycondition.jl:413",
-      " [4] boundaryConditionTerm(BC::BoundaryCondition)",
-      "   @ JFVM ~/projects/JFVM.jl/src/boundarycondition.jl:59",
-      " [5] top-level scope",
-      "   @ In[6]:21",
-      " [6] eval",
+      " [1] boundaryConditionRadial2D(BC::BoundaryCondition)",
+      "   @ JFVM ~/projects/JFVM.jl/src/boundarycondition.jl:432",
+      " [2] boundaryConditionTerm(BC::BoundaryCondition)",
+      "   @ JFVM ~/projects/JFVM.jl/src/boundarycondition.jl:50",
+      " [3] top-level scope",
+      "   @ In[2]:21",
+      " [4] eval",
       "   @ ./boot.jl:360 [inlined]",
-      " [7] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
       "   @ Base ./loading.jl:1094"
      ]
     }
@@ -209,6 +208,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Julia 1.6.0",
    "language": "julia",
